--- a/{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/templates/base.html
+++ b/{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/templates/base.html
@@ -1,29 +1,51 @@
 {% raw %}{% load staticfiles %}
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <meta charset="utf-8">
     <meta name="description" content="{% block description %}{% endblock %}">
     <meta name="viewport" content="width=device-width">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <link rel="shortcut icon" type="image/x-icon" href="{% static 'img/favicon.ico' %}">
 
     <title>{% block title %}{{cookiecutter.project_name}}{% endblock title %}</title>
 
     <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
     {% block css %}
+    {% if debug %}
     <link href="{% static 'css/project.css' %}" rel="stylesheet">
+    {% else %}
+    <link href="{% static 'css/project.min.css' %}" rel="stylesheet">
+    {% endif %}
     {% endblock %}
-    {% block head_js %}{% endblock head_js %}
-  </head>
 
-  <body>
+    {% block head_js %}
+    {% if debug %}
+    <script src="{% static 'js/project_init.js' %}"></script>
+    {% else %}
+    <script src="{% static 'js/project_init.min.js' %}"></script>
+    {% endif %}
+
+    <script>
+    /* grunticon Stylesheet Loader | https://github.com/filamentgroup/grunticon | (c) 2012 Scott Jehl, Filament Group, Inc. | MIT license. */
+    window.grunticon=function(e){if(e&&3===e.length){var t=window,n=!(!t.document.createElementNS||!t.document.createElementNS("http://www.w3.org/2000/svg","svg").createSVGRect||!document.implementation.hasFeature("http://www.w3.org/TR/SVG11/feature#Image","1.1")||window.opera&&-1===navigator.userAgent.indexOf("Chrome")),o=function(o){var r=t.document.createElement("link"),a=t.document.getElementsByTagName("script")[0];r.rel="stylesheet",r.href=e[o&&n?0:o?1:2],a.parentNode.insertBefore(r,a)},r=new t.Image;r.onerror=function(){o(!1)},r.onload=function(){o(1===r.width&&1===r.height)},r.src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///ywAAAAAAQABAAACAUwAOw=="}};
+    grunticon( [ "{% static 'icons/icons.data.svg.css' %}", "{% static 'icons/icons.data.png.css' %}", "{% static 'icons/icons.fallback.css' %}" ] );</script>
+    <noscript><link href="{% static 'icons/icons.fallback.css' %}" rel="stylesheet"></noscript>
+    {% endblock head_js %}
+</head>
+
+<body>
     {% block content %}{% endblock content %}
 
     {% block javascript %}
-      <script src="{% static 'js/project.js' %}"></script>
+    {% if debug %}
+    <script src="{% static 'js/project.js' %}"></script>
+    {% else %}
+    <script src="{% static 'js/project.min.js' %}"></script>
+    {% endif %}
     {% endblock javascript %}
-  </body>
+</body>
 </html>{% endraw %}
